[gd_scene load_steps=6 format=3 uid="uid://rw04mhn7on13"]

[ext_resource type="Script" path="res://Scripts/UI/combat_gui.gd" id="1_8vo75"]
[ext_resource type="Theme" uid="uid://c74xmjjbwnv0t" path="res://Resources/UI/ui_theme.tres" id="1_a730r"]
[ext_resource type="Texture2D" uid="uid://b2ymmbub0mq5m" path="res://Arts/Sprout Lands - UI Pack - Basic pack/Sprite sheets/Sprite sheet for Basic Pack.png" id="2_g0j7s"]
[ext_resource type="FontFile" uid="uid://d117dixktvope" path="res://Arts/Fonts/MenuCard.ttf" id="3_0wguy"]

[sub_resource type="LabelSettings" id="LabelSettings_3yexw"]
line_spacing = 0.0
font = ExtResource("3_0wguy")
font_size = 8

[node name="Combat_GUI" type="CanvasLayer"]
script = ExtResource("1_8vo75")

[node name="Control" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -117.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_a730r")

[node name="Panel" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 13.0
offset_right = -17.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g0j7s")
region_rect = Rect2(201, 9, 30, 30)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Start Options" type="Control" parent="Control/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Panel/Start Options"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = 316.0
offset_bottom = -12.0
grow_vertical = 2
text = "Cosa vuoi fare?"

[node name="Actions" type="Control" parent="Control/Panel/Start Options"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -255.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 2

[node name="ObjectsButton" type="Button" parent="Control/Panel/Start Options/Actions"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -28.5
offset_right = -5.0
offset_bottom = -3.5
grow_horizontal = 2
grow_vertical = 2
text = "Oggetto"

[node name="RunButton" type="Button" parent="Control/Panel/Start Options/Actions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 1.5
offset_right = -5.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
text = "Fuga"

[node name="FightButton" type="Button" parent="Control/Panel/Start Options/Actions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Combatti"

[node name="Dialogs" type="Control" parent="Control/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Panel/Dialogs"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 13.0
offset_right = 592.0
offset_bottom = -12.0
grow_vertical = 2
text = "Scampato pericolo!"

[node name="Combat Options" type="Control" parent="Control/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Actions" type="Control" parent="Control/Panel/Combat Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 11.0
offset_right = -12.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Control/Panel/Combat Options/Actions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/Combat Options/Actions/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ability1Button" type="Button" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Abilita'"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Descrizione" type="Label" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "asdsa asdasd asdasd
asd asd
asd asdasd"
label_settings = SubResource("LabelSettings_3yexw")
max_lines_visible = 2

[node name="Costo" type="Label" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MP: 40"
label_settings = SubResource("LabelSettings_3yexw")
clip_text = true
max_lines_visible = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Panel/Combat Options/Actions/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ability2Button" type="Button" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Abilita'"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Descrizione" type="Label" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "asdsa asdasd asdasd
asd asd
asd asdasd"
label_settings = SubResource("LabelSettings_3yexw")
max_lines_visible = 2

[node name="Costo" type="Label" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MP: 40"
label_settings = SubResource("LabelSettings_3yexw")
clip_text = true
max_lines_visible = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Panel/Combat Options/Actions/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ability3Button" type="Button" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Abilita'"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Descrizione" type="Label" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "asdsa asdasd asdasd
asd asd
asd asdasd"
label_settings = SubResource("LabelSettings_3yexw")
max_lines_visible = 2

[node name="Costo" type="Label" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MP: 40"
label_settings = SubResource("LabelSettings_3yexw")
clip_text = true
max_lines_visible = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/Panel/Combat Options/Actions/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ability4Button" type="Button" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Abilita'"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Descrizione" type="Label" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "asdsa asdasd asdasd
asd asd
asd asdasd"
label_settings = SubResource("LabelSettings_3yexw")
max_lines_visible = 2

[node name="Costo" type="Label" parent="Control/Panel/Combat Options/Actions/GridContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MP: 40"
label_settings = SubResource("LabelSettings_3yexw")
clip_text = true
max_lines_visible = 1

[connection signal="pressed" from="Control/Panel/Start Options/Actions/RunButton" to="." method="_on_run_button_pressed"]
[connection signal="pressed" from="Control/Panel/Start Options/Actions/FightButton" to="." method="_on_fight_button_pressed"]
